# nakama-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
protos/: README.md
src/: lib.rs
src/nakama/: api.rs  google_api.rs  grpc_gateway_protoc_gen_openapiv2_options.rs  mod.rs  realtime.rs
tests/: account.rs  auth.rs  storage.rs  test_utils.rs
