[package]
name = "nakama-rust-gen"
description = "gRPC client code for Nakama Server."
version = "0.1.4"
authors = ["max <harumaxy@gmail.com>"]
edition = "2018"
homepage = "https://github.com/harumaxy/nakama-rust-gen"
repository = "https://github.com/harumaxy/nakama-rust-gen"
readme = "README.md"
exclude = ["src/gen/*"]
include = ["src/nakama/*", "src/lib.rs", "Cargo.toml"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tonic = "0.4"
prost = "0.7"
prost-types = "0.7"
base64 = "0.13.0"


[build-dependencies]
tonic-build = { version = "0.4", features = ["prost"] }


[dev-dependencies]
tokio = { version = "1.0.2", features = ["rt-multi-thread", "macros"] }
tokio-test = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
